# strong-typedef

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: strong_typedef.hpp  strong_typedef_test.cpp
